# mesh-gen-pipeline

./: .gitignore  CLAUDE.md  GEMINI.md  LICENSE  MEMORY.md  README.md  check_rot.py  fix_build.sh  main.py  pyproject.toml  requirements.txt  test_stage3.py
scripts/: __init__.py  blender_animate.py  blender_auto_rig.py  blender_retarget_motion.py  blender_standardize.py  check_quality.py  fbx_to_glb.py  motiongpt_inference.py  obj_to_glb.py  p3sam_inference.py  patch_trellis_pipeline.py  puppeteer_blend_export.py  puppeteer_runner.py  setup_all.sh  setup_external_repos.sh  setup_flux.sh  setup_motiongpt.sh  setup_p3sam.sh  setup_puppeteer.sh  setup_sf3d.sh  setup_trellis.sh  setup_unirig.sh  setup_uv_envs.sh  setup_wsl.sh  unirig_inference.py  validate_stage4.py  wsl_config_recommendation.txt
src/: assemble_character.py  blender_rigid_body.py  calculate_high_poly_skin.py  extract_trimesh.py  stage1_prompt_parsing.py  stage1_vision_prior.py  stage2_text_to_3d.py  stage2_trellis_wrapper.py  stage3_mesh_optimization.py  stage3_mesh_refinement.py  stage4_animation_routing.py  stage4_assemble_final.py  stage4_auto_rig.py  stage4_motion_synthesis.py  stage4_partsam_segment.py  stage4_sampart3d_segment.py  stage4_topology_agnostic_rig.py  stage5_animation.py
tests/: test_pipeline_integration.py  test_stage1_prompt_parsing.py  test_stage2_text_to_3d.py  test_stage3_mesh_optimization.py  test_stage4_auto_rig.py  test_stage5_animation.py
